fix gap issue with story__header element

--- a/scss/components.scss
+++ b/scss/components.scss
@@ -124,7 +124,7 @@
       linear-gradient(208deg, transparent 100px, #068278 100px),
       linear-gradient(90deg, transparent 0px, #068278 0px);
     background-position: bottom left, top left, top right, bottom right;
-    background-size: 50% 50%;
+    background-size: 51% 51%;
     background-repeat: no-repeat;
   }
 }
